Fixes table-card white space problem

--- a/public/javascripts/mobile/styles/table.scss
+++ b/public/javascripts/mobile/styles/table.scss
@@ -1,4 +1,4 @@
-.socrata-table {
+.socrata-table-container {
   height: 521px;
 
   tr {
